# toy_project_app_production

./: README.md
toy_project/: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
toy_project/accounts/: admin.py  email.py  models.py  permissions.py  serializers.py  urls.py  views.py
toy_project/accounts/migrations/: 0001_initial.py  0002_alter_user_username.py
toy_project/accounts/templates/accounts/: activation.html  confirmation.html  password_changed_confirmation.html  password_reset.html
toy_project/accounts/templates/email/: user_reset_password.html  user_reset_password.txt
toy_project/find_retro_toys/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
toy_project/find_retro_toys/migrations/: 0001_initial.py  0002_auto_20211005_0633.py  0003_auto_20211021_0322.py  0004_auto_20220513_0521.py  0005_auto_20220616_0434.py  0006_remove_post_like_numbers.py  0007_post_like_numbers.py  0008_auto_20221123_2042.py
toy_project/myenv/: pyvenv.cfg
toy_project/toy_project/: settings.py  settings_mysql.py  urls.py  wsgi.py
toy_project_frontend/: package-lock.json  package.json
toy_project_frontend/public/: index.html
toy_project_frontend/src/: App.css  index.css  index.js
toy_project_frontend/src/components/: About.js  App.js  CancelMembership.js  Default.js  Footer.js  Header.js  LikeButton.js  LikedPostsListPage.js  Login.js  Logout.js  MessageRoom.js  MessageRoomList.js  MyPage.js  MyPagePasswordUpdate.js  MyPostsListPage.js  PasswordReset.js  PasswordResetConfirm.js  Post.js  PostDetail.js  SignUpActivation.js  Signup.js  (+1 more)
(+2 files in other folders)
